--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portfolio" />
   <title>hello</title>
   <link rel="stylesheet" href="css/main.css" />
   <script src="https://kit.fontawesome.com/3d2feb4bc3.js" crossorigin="anonymous"></script>
