Added new technologies icon to About me section and style them on particular devices

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1>About Me</h1>
         <p>I'm a Frontend Developer located in Poland.</p>
         <p>Fan of listening podcasts, reading books, outdoor activities and psychology.</p>
-        <p>Languages:</p>
+        <p>Technologies:</p>
         <div class="about-me__title__technologies">
           <a href="https://www.w3.org/html/"><img src="images/html.svg" alt="html"
               class="about-me__title__technologies__image" /></a>
@@ -80,6 +80,10 @@
           <a href="https://sass-lang.com/"><img src="images/sass.svg" alt="sass"
               class="about-me__title__technologies__image" /></a>
           <a href="https://www.typescriptlang.org/"><img src="images/ts.svg" alt="typescript"
+              class="about-me__title__technologies__image" /></a>
+          <a href="https://reactjs.org/"><img src="images/react-logo.png" alt="html"
+              class="about-me__title__technologies__image" /></a>
+          <a href="https://tailwindcss.com/"><img src="images/tailwind-logo.png" alt="html"
               class="about-me__title__technologies__image" /></a>
           <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"><img src="images/js.svg" alt="javascript"
               class="about-me__title__technologies__image" /></a>
